[TableDetection] - modified TableDetectionModule configuration options
This will allows the user to execute multiple camelot runs on the document, using different customized options to increase accuracy on table detection.

It's the first step on solving this clubhouse story:
https://app.clubhouse.io/parsr/story/3031/tables-aren-t-detected-in-this-pdf

--- a/server/defaultConfig.json
+++ b/server/defaultConfig.json
@@ -22,8 +22,12 @@
     [
       "table-detection",
       {
-        "pages": [],
-        "flavor": "lattice"
+        "pageConfig": [
+          {
+            "pages": [],
+            "flavor": "lattice"
+          }
+        ]
       }
     ],
     [
