--- a/api/server/package.json
+++ b/api/server/package.json
@@ -17,14 +17,17 @@
 		"@types/multer": "^1.3.7",
 		"commander": "^2.19.0",
 		"express": "^4.16.4",
+		"file-type": "^9.0.0",
+		"gm": "^1.23.1",
 		"multer": "^1.4.1",
+		"pdf2pic": "^1.3.9",
 		"pino": "^5.12.0",
 		"pino-pretty": "^2.6.0",
-		"pdf2pic": "^1.3.9",
-		"gm": "^1.23.1"
+		"sharp": "^0.23.3"
 	},
 	"devDependencies": {
 		"@types/express": "^4.16.1",
+		"@types/file-type": "^10.9.1",
 		"@types/node": "^11.11.1",
 		"@types/pino": "^5.8.6"
 	}
