--- a/docker/parsr-base/Dockerfile
+++ b/docker/parsr-base/Dockerfile
@@ -2,8 +2,8 @@ FROM debian:10 as engine
 
 RUN apt-get update && \
     apt-get install -y imagemagick graphicsmagick mupdf mupdf-tools qpdf pandoc tesseract-ocr-all nodejs npm python-pdfminer python-pip python3-pip python-tk python3-pdfminer python3-opencv && \
-    pip install ghostscript camelot-py && \
-    pip3 install ghostscript camelot-py 
+    pip install ghostscript camelot-py scikit-image numpy pillow && \
+    pip3 install ghostscript camelot-py scikit-image numpy pillow
     
 WORKDIR /opt/app-root/src
 RUN chown 1001:0 /opt/app-root/src
