--- a/Pipfile
+++ b/Pipfile
@@ -1,12 +1,16 @@
 [[source]]
 name = "pypi"
 url = "https://pypi.org/simple"
-verify_ssl = false
+verify_ssl = true
 
 [dev-packages]
 
 [packages]
-camelot-py = "*"
+parabolic = "==0.1.2"
+camelot-py = "==0.7.3"
+numpy = "==1.17.4"
+Pillow = "==6.2.1"
+scikit-image = "*"
 
 [requires]
 python_version = "3.7"
