--- a/package.json
+++ b/package.json
@@ -60,6 +60,8 @@
     "file-type": "^9.0.0",
     "html-entities": "^1.2.1",
     "jimp": "^0.8.5",
+    "limit-async": "^1.3.0",
+    "pdfjs-dist": "^2.2.228",
     "pino": "^5.13.2",
     "pino-pretty": "^2.6.1",
     "request": "^2.88.0",
@@ -80,6 +82,7 @@
     "@types/html-entities": "^1.2.16",
     "@types/mocha": "^5.2.7",
     "@types/node": "^10.14.16",
+    "@types/pdfjs-dist": "^2.1.2",
     "@types/pino": "^5.8.9",
     "@types/string-similarity": "^3.0.0",
     "@types/xml2js": "^0.4.4",
