--- a/server/defaultConfig.json
+++ b/server/defaultConfig.json
@@ -60,7 +60,7 @@
         "tolerance": 0.25
       }
     ],
-    "heading-detection",
+    "heading-detection-dt",
     "list-detection",
     [
       "page-number-detection",
