--- a/server/src/processing/HeadingDetectionDTModule/defaultConfig.json
+++ b/server/src/processing/HeadingDetectionDTModule/defaultConfig.json
@@ -1,4 +1,4 @@
 {
-  "name": "heading-detection",
+  "name": "heading-detection-dt",
   "description": "Create headings from a collection of paragraphs."
 }
